# Waterbody_Mapping_from_Satellite_Imagery

./: README.md  main.py  pyproject.toml
data/: README.md
research/data_analysis/: 1_raw_data_analysis.ipynb
research/model_training/: 1_training_on_rgb_data.ipynb
s1s2_water/: download?id=1faVYayxdNFGx2m0IxswDncoKmIxusdf7  pyproject.toml  requirements.txt  settings.toml  tif_to_png.py
