[project]
name = "waterbody-mapping-from-satellite-imagery"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "folium>=0.19.7",
    "geopandas>=1.1.0",
    "ipykernel>=6.29.5",
    "matplotlib>=3.10.3",
    "matplotlib-venn>=1.1.2",
    "pystac-client>=0.8.6",
]
