[project]
name = "s1s2-water"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "jupyter>=1.1.1",
    "rasterio>=1.3.8",
    "ukis-pysat[raster]>=1.5.1",
    "pydantic>=2.3.0",
    "toml>=0.10.2",
    "tifffile>=2023.8.30",
    "pystac==1.8.3",
    "pystac_client==0.6.1",
    "geopandas>=0.13.2",
    "folium>=0.14.0",
    "tqdm>=4.66.1",
]
